Fix up for Solr 8.5.0 and Xjoin.

--- a/lucene/ivy-versions.properties
+++ b/lucene/ivy-versions.properties
@@ -329,3 +329,8 @@ ua.net.nlp.morfologik-ukrainian-search.version = 3.9.0
 
 /xerces/xercesImpl = 2.12.0
 /xml-apis/xml-apis = 1.4.01
+
+# for XJoin
+/com.jayway.jsonpath/json-path = 2.1.0
+/net.minidev/accessors-smart = 1.1
+/net.minidev/json-smart = 2.2.1
