--- a/lucene/version.properties
+++ b/lucene/version.properties
@@ -6,5 +6,7 @@ version.base=8.5.0
 
 # Other version property defaults, don't change:
 version.suffix=SNAPSHOT
-version=${version.base}-${version.suffix}
+# 20170530 KKr - changing for our build (brute-force approach)
+# version=${version.base}-${version.suffix}
+version=${version.base}
 spec.version=${version.base}
